compiler-core/src/error/snapshots/gleam_core__error__tests__shell_program_not_found_erlc_macos_other.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0].text"
---
The program `erlc` was not found. Is it installed?

You can install Erlang via homebrew: brew install erlang

Documentation for installing Erlang can be viewed here:
https://gleam.run/getting-started/installing/
