compiler-core/src/error/snapshots/gleam_core__error__tests__shell_program_not_found_rebar3_linux_ubuntu.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0].text"
---
The program `rebar3` was not found. Is it installed?

Documentation for installing Rebar3 can be viewed here:
https://rebar3.org/docs/getting-started/
